--- a/Client/Pages/Index.razor
+++ b/Client/Pages/Index.razor
@@ -3,5 +3,6 @@
 <h1>Hello, world!</h1>
 
 Welcome to your new app.
+It is built with Blazor and is hosted as a static site.
 
 <SurveyPrompt Title="How is Blazor working for you?" />
